Fix all build warnings and issues